CSS-BUG:Fixed h1 font size to better fit the questions and fixed * font size for overflowing issue with paages on load

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,12 +8,12 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-size: 62.5%;
+    font-size: 55.5%;
     font-family: 'Nova Square', cursive;
 }
 
 h1 {
-    font-size: 5.4rem;
+    font-size: 3.4rem;
     color: #fff;
     margin-bottom: 5rem;
 }
